# prismo

./: .postcssrc.json  CUSTOM_LIBRARIES.md  README.md  TEST_JAVA_SUPPORT.md  angular.json  package-lock.json  package.json  tailwind.config.js  test_session_tracking.py
backend/: .env.template  .gitignore  COMPLETE_API_ROUTES.md  COMPLETE_REFERENCE.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  OAUTH_SETUP.md  QUICK_START.md  README.md  SETUP.md  SUPABASE_README.md  config.py  fix_progress_column.sql  fix_time_spent.py  main.py  pyproject.toml  setup_aws_credentials.py  setup_tables.py  supabase_custom_libraries.sql  supabase_schema.sql  test_auto_test_generation.py  test_aws.py  test_bedrock_api.py  test_code_execution.py  test_java_execution.py  test_module_generator.py  test_orm.py
backend/app/: __init__.py  ace_engine.py  admin_routes.py  advanced_routes.py  ai_routes.py  analytics_routes.py  auth_routes.py  auth_service.py  auth_service_supabase.py  aws_config.py  claude_routes.py  data_routes.py  frontend_routes.py  gamification_routes.py  health_routes.py  learning_routes.py  libraries_routes.py  models.py  module_generator_routes.py  module_session_routes.py  oauth_routes.py  orm.py  orm_supabase.py  routes.py  supabase_config.py
backend/app/ace/: __init__.py  engine.py  learner_profile.py  module_generator.py  module_selector.py  skill_tree.py
backend/templates/: index.csr.html
backend/templates/components/: index.html
backend/templates/dashboard/: index.html
backend/templates/forgot-password/: index.html
backend/test_outputs/: complex_module.json
(+492 files in other folders)
